<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <EditText android:id="@+id/txtUserName" android:layout_height="wrap_content" android:layout_width="fill_parent" 
             android:hint="@string/username" android:inputType="text" />
         
         <EditText android:id="@+id/txtEmail" android:layout_marginTop="15dip" android:layout_height="wrap_content"
              android:layout_width="fill_parent" android:hint="@string/email" android:inputType="textEmailAddress" />
         
         <EditText android:id="@+id/txtPass" android:layout_height="wrap_content" 
             android:layout_width="fill_parent" android:hint="@string/password" android:inputType="textPassword"
             android:layout_marginTop="15dip" android:layout_marginBottom="30dip" />
         
         
         <Button android:id="@+id/btnRegister" android:layout_height="wrap_content" 
             android:layout_width="wrap_content" android:text="@string/send"
              android:layout_gravity="center_horizontal" android:paddingLeft="15dip" android:paddingRight="15dip" />
         
         <TextView android:id="@+id/link_to_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                  android:text="@string/login"
                  android:gravity="center"
                  android:textSize="20dip"
                  android:textColor="#0b84aa"/>
         
         <TextView android:id="@+id/register_error"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                   
                  android:gravity="center"
                  android:textSize="20dip"
                  android:textColor="#0b84aa"/>
    

</LinearLayout>
