<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="15dip"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:textColor="#DF0101"
            android:textSize="10dip" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/login" />

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:text="@string/signup_"
            android:textColor="#0b84aa"
            android:textSize="20dip" />
    </LinearLayout>

</LinearLayout>