<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:text="@string/data_collecter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/butDataCollector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" 
            android:textOff="Off"
            android:textOn="On"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.74"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSendImmediately"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_immediately"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnPermissionConsole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_console" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Number of queries saved:"
            android:id="@+id/search_queries_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Number of pages saved: "
            android:id="@+id/pages_visited_number"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>